...
    return true;
  }

  const result = await PermissionsAndroid.request(permission, {
    title,
    message,
    buttonPositive: "Allow",
    buttonNegative: "Deny",
  });

  if (result === PermissionsAndroid.RESULTS.GRANTED) {
    return true;
  }
...
